# mcp_test_2

./: .gitignore  HOW_IT_WORKS.md  METADATA_GUIDE.md  QUICKSTART.md  README.md  metadata_index.json  pyproject.toml
.github/: copilot-instructions.md
examples/: pom.xml
examples/configs/: daily_settlement_report.sql  transaction_audit.sql
examples/src/: SettlementReportGenerator.java  TransactionAuditProcessor.java
examples/src/main/java/com/trade/surveillance/: SettlementReportGenerator.java  TransactionAuditProcessor.java
examples/src/test/java/com/trade/surveillance/: SettlementReportGeneratorTest.java  TransactionAuditProcessorTest.java
examples/test/: SettlementReportGeneratorTest.java  TransactionAuditProcessorTest.java
trade_surveillance_mcp/: __init__.py  metadata_index.py  server.py
