[project]
name = "trade-surveillance-mcp-server"
version = "0.1.0"
description = "MCP server for automating trade surveillance support workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0"
]

[project.scripts]
trade-surveillance-mcp = "trade_surveillance_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trade_surveillance_mcp"]

[dependency-groups]
dev = []
